--- a/css/main.css
+++ b/css/main.css
@@ -22,45 +22,51 @@ img {
     margin: 0 50px;
 }
 
+
 /* Homepage */
 
-.intro {
+/* .intro {
     transform: translateY(22vh);
-}
+} */
 
-.intro > h1 {
+/* .intro > h1 {
     color: #212121;
     font-size: 12vh;
-}
+} */
 
-.intro > h2 {
+/* .intro > h2 {
     color: #757575;
     font-size: 3vmin;
-}
+} */
+
 
 /* Page content */
 
-.content {
+/* .content {
     padding-top: 30px;
     font-size: 15px; 
-}
+} */
 
 br {
             display: block; /* makes it have a width */
             content: " "; /* clears default height */
             line-height: 5pt; /* change this to whatever height you want it */
-}
+} 
+
+
 /* Profile picture */
 
-.profile {
+/* .profile {
     width: 10vh;
     height: 10vh;
     border-radius: 50%;
-}
+} */
+
+
 
 /* Colored links */
 
-a:link, a:visited {
+/* a:link, a:visited {
     color: var(--accent);
 }
 
@@ -70,50 +76,59 @@ a.icon:hover {
 
 a:hover {
     color: var(--accent) !important;
-}
+} */
+
+
 
 /* Copyright message */
 
-.copyright {
+/* .copyright {
     margin: 25px 0;
-}
+} */
+
+
 
 /* Paginator */
 
-.pages {
+/* .pages {
     padding: 15px 0;
 }
 
 .pages-icon {
     padding: 0 15px;
-}
+} */
+
+
 
 /* List item for posts/projects */
 
-.item {
+/* .item {
     padding: 10px 0;
 }
 
 .item-tag {
     background-color: var(--accent);
-}
+} */
+
 
 /* Navigation icons */
-.navbar {
+/* .navbar {
     font-size: 15px;
 }
 
 .navbar-icon {
     font-size: 125%;
     display: inline-block !important;
-}
+} */
+
+
 
 /* Colored borders at top/bottom of page */
 
-.navbar.navbar-default {
+/* .navbar.navbar-default {
     border-top: var(--border-width) solid var(--accent);
 }
 
 footer {
     border-bottom: var(--border-width) solid var(--accent);
-}
+} */
