--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,22 @@ img {
 
 /* Homepage */
 
-h2 {
-    text-align: center;
+.navbar ul {
+    list-style-type: none;
+    background-color: aqua;
+    padding: 0px;
+    margin: 0px;
 }
 
+.navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+}
+
+.navbar a:hover {
+    background-color: blue;
+}
 
 
 /* .intro {
