--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,30 @@
-html, body {
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #24252A;
+}
+
+li, a {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #edf0f1;
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+
+
+
+
+/* html, body {
     height: 100%;
 }
 
@@ -20,12 +46,12 @@ img {
     max-width: 30%;
     float: left;
     margin: 0 50px;
-}
+} */
 
 
 /* Homepage */
 
-.navbar ul{
+/* .navbar ul{
     list-style-type: none;
     background-color: aqua;
     padding: 0px;
@@ -40,7 +66,7 @@ img {
 
 .navbar a:hover{
     background-color: blue;
-}
+} */
 
 
 
