--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,18 @@ header {
     padding: 30px 10%; 
 }
 
+.nav_links {
+    list-style: none;
+}
 
+.nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
 
+.nav_links li a:hover {
+    color: #0088a9;
+}
 
 
 /* html, body {
