--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ li, a {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
-    color: #edf0f1;
+    color: #9d9f9f;
     text-decoration: none;
 }
 
