--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,20 @@
     background-color: white;
 }
 
+body {
+    padding-top: 75px;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+}
+
+main {
+    margin: auto;
+    padding: 30px;
+    flex: 1 0 auto;
+    max-width: 820px;
+}
+
 li, a {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
