--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ main {
 }
 
 li, a {
-    font-family: "Montserrat", sans-serif;
+    /* font-family: "Montserrat", sans-serif; */
     font-weight: 500;
     font-size: 15px;
     color: #9d9f9f;
